[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locivault-client"
version = "0.1.9"
description = "Python client for LocIVault — a private space where agents keep who they are"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "agent", "identity", "encryption", "web3", "locivault", "persistent", "self-authorship"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
    "cryptography>=41",
    "eth-account>=0.10",
]

[project.optional-dependencies]
payments = [
    "x402[evm]>=2.5",
]
all = [
    "x402[evm]>=2.5",
]

[project.urls]
Homepage    = "https://locivault.dev"
Repository  = "https://github.com/locivault/locivault-python"
"Bug Tracker" = "https://github.com/locivault/locivault-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["locivault_client*"]
